--- a/warehouse_mro/templates/base.html
+++ b/warehouse_mro/templates/base.html
@@ -81,7 +81,7 @@
                 <i class="bi bi-shield-lock-fill me-2"></i>Administración Owner
             </a>
 
-            <a href="{{ url_for('auth.gestion_roles') }}" class="list-group-item bg-dark">
+            <a href="{{ url_for('admin_roles.listar_roles') }}" class="list-group-item bg-dark">
                 <i class="bi bi-people-fill me-2"></i>Gestión de Roles
             </a>
             {% endif %}
@@ -167,3 +167,4 @@
 
 </body>
 </html>
+
